<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hintName"
            android:inputType="textCapWords" />

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/whippedCream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toppingCheckBox"
            android:padding="24dp"
            android:text="@string/whippedcream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toppingCheckBox"
            android:padding="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/qty"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:onClick="decrement"
                android:text="@string/minusQty" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/defQty"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:onClick="increment"
                android:text="@string/addQty" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/btnText"
            android:textColor="#000000" />

    </LinearLayout>
</ScrollView>